[package]
name = "burn-1270-mre"
version = "0.1.0"
edition = "2021"
authors = ["yurzhang <yurzhang.oi@gmail.com>"]
license = "MIT"
repository = "https://github.com/Nikaidou-Shinku/burn-1270-mre.git"

[profile.release]
strip = true
lto = true
codegen-units = 1

[dependencies.burn]
version = "0.12.1"
default-features = false
features = ["std", "wgpu"]

[dependencies.burn-import]
version = "0.12.1"
default-features = false
features = ["pytorch"]
